--- a/index.html
+++ b/index.html
@@ -181,6 +181,36 @@
       </section>
 
       <section>
+        <h1>
+          <small>Next Up:</small>
+          <br>Common CSS Tooling</h1>
+      </section>
+
+      <section>
+        <h2>PostCSS:</h2>
+        <blockquote>A tool for transforming styles with JS plugins by transforming CSS into an AST.</blockquote>
+      </section>
+
+      <section>
+        <h3>Autoprefixer</h3>
+        <blockquote>PostCSS plugin to parse CSS and add vendor prefixes to CSS rules using values from
+          <a href="https://caniuse.com/" target="new">Can&nbsp;I&nbsp;Use</a>
+        </blockquote>
+        <p>Autoprefixer uses <a href="https://github.com/browserslist/browserslist">Browserslist</a>, so you can specify the browsers you want to target in your project by queries like
+          &gt; 5%.</p>
+      </section>
+
+      <section>
+        <h3>cssnano</h3>
+        <blockquote>PostCSS plugin for modern CSS compression
+        </blockquote>
+        <p>cssnano has dozens of optimisations both safe for all stylesheets and more advanced to squeeze every unnecessary byte out.</p>
+      </section>
+
+
+
+
+      <section>
         <h1>Common CSS Conventions</h1>
       </section>
 
@@ -460,8 +490,7 @@ var styles = {
 
 
       <section>
-        <h1>CSS Tooling</h1>
-        <h2>Often referred to as CSS-in-JS</h2>
+        <h1>CSS-in-JS</h1>
         <a>There are
           <a href="https://github.com/MicheleBertoli/css-in-js">SO MANY options</a>
           </p>
