--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ var styles = {
 
       <section>
         <section>
-          <h3>Atomic: Atomizer</h3>
+          <h3>Atomizer</h3>
           <pre><code class="js">//...Atomizer Config...
 breakPoints: {
   sm: '@media(min-width: 45em)',
@@ -707,7 +707,7 @@ custom: {
 
       <section>
         <section>
-          <h3>Atomic: Pre-Style</h3>
+          <h3>Pre-Style</h3>
           <pre><code class="scss">&lt;header
   className={PreStyle`
     //SASS. IN. YOUR. JS!!!!
