--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <section>
         <h1>Remember</h1>
         <blockquote class="fragment">There is no one right away to approach CSS...</blockquote>
-        <blockquote class="fragment">...but there are plenty of wrong ways 😅</blockquote>
+        <blockquote class="fragment" style="font-style: normal;">...but there are plenty of wrong ways 😅</blockquote>
       </section>
 
       <section>
